<resources>
    <string name="app_name">QPrashna</string>
    <string name="user_name_hint_text">UserName</string>
    <string name="password_hint_text">Password</string>
    <string name="login_text">Login</string>
    <string name="not_registered_signup_now">Not registered? Sign up Now!</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="first_name_hint_text">FirstName</string>
    <string name="last_name_hint_text">LastName</string>
    <string name="email_address_hint_text">EmailAddress</string>
    <string name="title_activity_sign_in_create_account">SignInCreateAccountActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="existing_user">Sign In</string>
    <string name="new_user">Create Account</string>
    <string name="registered_signin_now">Already registered? Sign In now!</string>
    <string name="network_error">Network is not available.  Please check your network connection and try again…</string>
    <string name="try_again_text">Something went wrong.  Please try again.</string>
    <string name="title_activity_feeds">Feeds</string>
    <string name="title_activity_qtns_asked_by_me">My Questions</string>
    <string name="title_activity_qtns_answered_by_me">My Answered Questions</string>
    <string name="title_activity_qtns_my_upvoted_qtns">My Up voted Questions</string>
    <string name="title_activity_qtns_un_answered_by_me">My Unanswered Questions</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_feeds_text">Feeds</string>
    <string name="nav_text_questions_answered_by_me">Questions Answered by Me</string>
    <string name="nav_textquestions_unanswered_by_me">Questions Unanswered by Me</string>
    <string name="nav_text_my_upvoted_questions">My Upvoted Questions</string>
    <string name="nav_text_questions_asked_by_me">Questions Asked by Me</string>
    <string name="nav_text_followers">Followers</string>
    <string name="nav_text_following">Following</string>
    <string name="nav_text_settings">Settings</string>
    <string name="nav_text_edit_profile">Edit Profile</string>
    <string name="nav_text_change_password">Change Password</string>
    <string name="nav_text_sign_out">Sign Out</string>
    <string name="search_for_person_text">Search for person…</string>
    <string name="asked_by_text">Asked By %s to %s</string>
    <string name="answered_by_text">Answered By %s for %s</string>
    <string name="posted_by_text">Posted By %s</string>
    <string name="qtn_and_answer_text">%s\nAnswer: %s</string>
    <string name="up_voted">Upvoted</string>
    <string name="up_vote">UpVote</string>
    <string name="up_votes">%s UpVotes</string>
    <string name="profileimage_desc">profileImage</string>
    <string name="post_qn_text">Post your question now…</string>
    <string name="ask_now">Ask Now</string>
    <string name="unfollow_txt">UnFollow</string>
    <string name="follow_txt">Follow</string>
    <string name="profile_user_name">%s\n%s</string>
    <string name="remove_success_text">Success</string>
    <string name="ask_qtn">Ask Question</string>
    <string name="title_following">People I follow</string>
    <string name="title_followers">My Followers</string>
    <string name="title_edit_profiile">Edit Profile</string>
    <string name="title_change_password">Change Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="designation_text">Designation</string>
    <string name="gender_text">Gender</string>
    <string name="choose_designation">Select Designation</string>
    <string name="select_gender">Select Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="state_text">State</string>
    <string name="designation">Designation</string>
    <string name="save_changes">Save Changes</string>
    <string name="gender">Gender</string>
    <string name="country">Country</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="profile_updated_text">Profile is updated successfully</string>
    <string name="password_updated_successfully">Password is updated successfully</string>
    <string name="appwidget_text">Recent Question</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_empty_string">You haven\'t asked any questions yet!</string>
    <string name="activate_account_text">Your account is not verified yet. Please click on the activation link sent to your registered mail.</string>
    <string name="verify_pending_status">Verify_Pending</string>
    <string name="account_active_status">active</string>
    <string name="adunitId">ca-app-pub-3940256099942544/1033173712</string>
    <string name="question_submit_text">Your question submitted successfully!</string>
    <string name="credentials_saved">Credentials saved in smart lock</string>
    <string name="job_scheduled">qprashna un answered questions reminder job scheduled.</string>
    <string name="remind_unanswered_questions_channel_name">Unanswered Quesions</string>
    <string name="unanswered_question_reminder_notification_title">QPrashna</string>
    <string name="unanswered_question_reminder_notification_body">You have new questions to answer</string>
</resources>
