<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_feeds"
            android:icon="@drawable/ic_group_work_black_24dp"
            android:title="@string/nav_feeds_text" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_question_answer_black_24dp"
            android:title="@string/nav_text_questions_answered_by_me" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_question_answer_black_24dp"
            android:title="@string/nav_textquestions_unanswered_by_me" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_thumb_up_black_24dp"
            android:title="@string/nav_text_my_upvoted_questions" />

        <item
            android:id="@+id/nav_my_questions"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/nav_text_questions_asked_by_me" />

        <item
            android:id="@+id/nav_followers"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/nav_text_followers" />

        <item
            android:id="@+id/nav_following"
            android:icon="@drawable/ic_people_outline_black_24dp"
            android:title="@string/nav_text_following" />
    </group>

    <item android:title="@string/nav_text_settings">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_edit_black_24dp"
                android:title="@string/nav_text_edit_profile" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_change_history_black_24dp"
                android:title="@string/nav_text_change_password" />
        </menu>
    </item>

    <group android:id="@+id/sign_out_group">
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/nav_text_sign_out" />
    </group>

</menu>
