<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/edit_profile_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="30dp"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/edit_profile_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:layout_marginBottom="30dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_profile_designation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/designation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/designation"
                android:inputType="date" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_profile_layout_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintLeft_toLeftOf="@id/edit_profile_designation"
            app:layout_constraintRight_toRightOf="@id/edit_profile_designation"
            app:layout_constraintTop_toBottomOf="@id/edit_profile_designation">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name_hint_text"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_profile_layout_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintLeft_toLeftOf="@+id/edit_profile_layout_first_name"
            app:layout_constraintRight_toRightOf="@+id/edit_profile_layout_first_name"
            app:layout_constraintTop_toBottomOf="@+id/edit_profile_layout_first_name">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name_hint_text"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_profile_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintLeft_toLeftOf="@+id/edit_profile_layout_first_name"
            app:layout_constraintRight_toRightOf="@+id/edit_profile_layout_first_name"
            app:layout_constraintTop_toBottomOf="@+id/edit_profile_layout_last_name">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/email_address_hint_text"
                android:textColor="@color/colorGray"
                android:inputType="none" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_profile_layout_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintLeft_toLeftOf="@+id/edit_profile_layout_first_name"
            app:layout_constraintRight_toRightOf="@+id/edit_profile_layout_first_name"
            app:layout_constraintTop_toBottomOf="@+id/edit_profile_layout_email">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date_of_birth"
                android:inputType="textShortMessage" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_profile_layout_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintLeft_toLeftOf="@+id/edit_profile_layout_first_name"
            app:layout_constraintRight_toRightOf="@+id/edit_profile_layout_first_name"
            app:layout_constraintTop_toBottomOf="@+id/edit_profile_layout_dob">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/gender"
                android:inputType="date" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_profile_layout_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintLeft_toLeftOf="@+id/edit_profile_layout_first_name"
            app:layout_constraintRight_toRightOf="@+id/edit_profile_layout_first_name"
            app:layout_constraintTop_toBottomOf="@+id/edit_profile_layout_gender">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/country"
                android:inputType="textShortMessage" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_profile_layout_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintLeft_toLeftOf="@+id/edit_profile_layout_first_name"
            app:layout_constraintRight_toRightOf="@+id/edit_profile_layout_first_name"
            app:layout_constraintTop_toBottomOf="@+id/edit_profile_layout_country">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/state_text"
                android:inputType="textShortMessage" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:id="@+id/save_changes"
            android:text="@string/save_changes"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@+id/edit_profile_layout_first_name"
            app:layout_constraintRight_toRightOf="@+id/edit_profile_layout_first_name"
            app:layout_constraintTop_toBottomOf="@+id/edit_profile_layout_state"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginBottom="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            app:layout_constraintLeft_toLeftOf="@+id/edit_profile_layout_first_name"
            app:layout_constraintRight_toRightOf="@+id/edit_profile_layout_first_name"
            app:layout_constraintTop_toBottomOf="@+id/save_changes"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>