<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileViewActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_weight="1"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/ask_qtn">

    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:id="@+id/profile_card"
        style="@style/CardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:layout_editor_absoluteX="33dp"
        tools:layout_editor_absoluteY="0dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/profile_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:paddingEnd="6dp"
                android:paddingStart="6dp"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/follow_btn"
                app:layout_constraintLeft_toRightOf="@+id/profile_image"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/follow_btn"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_margin="8dp"
                android:background="@color/colorRed"
                android:text="@string/unfollow_txt"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/profile_image"
                app:layout_constraintTop_toBottomOf="@+id/profile_user_name" />

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:background="@drawable/placeholder"
                android:contentDescription="@string/profileimage_desc"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/CardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="309dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_card">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:hint="@string/post_qn_text"
                android:gravity="top"
                app:layout_constraintBottom_toTopOf="@+id/divider"
                app:layout_constraintTop_toTopOf="parent"
                android:backgroundTint="@color/colorWhite"
                android:inputType="textLongMessage" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGray"
                app:layout_constraintTop_toBottomOf="@+id/question" />


            <Button
                android:id="@+id/askBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@color/colorAsk"
                android:text="@string/ask_now"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>