<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_in_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginBottom="30dp"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/sign_in_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="18dp"
        android:layout_marginBottom="30dp"
        tools:context=".ui.SignInActivity">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <EditText
                android:id="@+id/user_name_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name_hint_text"
                android:inputType="textPersonName"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintLeft_toLeftOf="@+id/input_layout_user_name"
            app:layout_constraintRight_toRightOf="@+id/input_layout_user_name"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_user_name">

            <EditText
                android:id="@+id/password_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint_text"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintLeft_toLeftOf="@+id/input_layout_user_name"
            app:layout_constraintRight_toRightOf="@+id/input_layout_user_name"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_password"
            android:visibility="gone">

            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name_hint_text"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintLeft_toLeftOf="@+id/input_layout_user_name"
            app:layout_constraintRight_toRightOf="@+id/input_layout_user_name"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_first_name"
            android:visibility="gone">

            <EditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name_hint_text"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintLeft_toLeftOf="@+id/input_layout_user_name"
            app:layout_constraintRight_toRightOf="@+id/input_layout_user_name"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_last_name"
            android:visibility="gone">

            <EditText
                android:id="@+id/email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address_hint_text"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@color/colorPrimary"
            android:text="@string/login_text"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="@+id/input_layout_user_name"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_email" />

        <TextView
            android:id="@+id/not_registered_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@+id/input_layout_user_name"
            app:layout_constraintRight_toRightOf="@+id/input_layout_user_name"
            app:layout_constraintTop_toBottomOf="@+id/login_button" />

        <View
            android:id="@+id/left_divider"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginBottom="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="40dp"
            android:background="@color/colorGray"
            app:layout_constraintLeft_toLeftOf="@+id/input_layout_user_name"
            app:layout_constraintRight_toLeftOf="@+id/or_text"
            app:layout_constraintTop_toBottomOf="@+id/not_registered_text" />

        <TextView
            android:id="@+id/or_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="30dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/or_text"
            app:layout_constraintLeft_toRightOf="@+id/left_divider"
            app:layout_constraintRight_toLeftOf="@+id/right_divider"
            app:layout_constraintTop_toBottomOf="@+id/not_registered_text" />

        <View
            android:id="@+id/right_divider"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginBottom="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:background="@color/colorGray"
            app:layout_constraintLeft_toRightOf="@+id/or_text"
            app:layout_constraintRight_toRightOf="@+id/input_layout_user_name"
            app:layout_constraintTop_toBottomOf="@+id/not_registered_text" />

        <com.facebook.login.widget.LoginButton xmlns:facebook="http://schemas.android.com/apk/res-auto"
            android:id="@+id/facebook_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="20dp"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:textSize="16sp"
            app:elevation="4dp"
            app:layout_constraintLeft_toLeftOf="@+id/input_layout_user_name"
            app:layout_constraintRight_toRightOf="@+id/input_layout_user_name"
            app:layout_constraintTop_toBottomOf="@+id/left_divider"
            facebook:com_facebook_login_text="@string/sign_in_with_facebook_button_text" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:layout_marginTop="15dp"
            app:layout_constraintLeft_toLeftOf="@+id/input_layout_user_name"
            app:layout_constraintRight_toRightOf="@+id/input_layout_user_name"
            app:layout_constraintTop_toBottomOf="@+id/facebook_login_button"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginBottom="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            app:layout_constraintLeft_toLeftOf="@+id/input_layout_user_name"
            app:layout_constraintRight_toRightOf="@+id/input_layout_user_name"
            app:layout_constraintTop_toBottomOf="@+id/google_sign_in_button"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>